--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
-  "dependencies": {
+  "devDependencies": {
     "tailwindcss": "^3.4.1"
+  },
+  "dependencies": {
+    "apexcharts": "^3.45.1",
+    "lodash": "^4.17.21",
+    "preline": "^2.0.3"
   }
 }
